--- a/src/presentation/views/login.html
+++ b/src/presentation/views/login.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="item">
-      <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-login="chegaaibot"
+      <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-login="arrozbot"
         data-size="large" data-auth-url="http://local.lvh.me/auth/telegram/callback"
         data-request-access="write"></script>
     </div>
