--- a/src/presentation/views/login.ejs
+++ b/src/presentation/views/login.ejs
@@ -12,8 +12,8 @@
 <body>
   <div class="container">
     <div class="item">
-      <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-login="arrozbot"
-        data-size="large" data-auth-url="http://hello-passport-auth.herokuapp.com/auth/telegram/callback"
+      <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-login="<%= botUsername %>"
+        data-size="large" data-auth-url="<%= redirectUrl %>"
         data-request-access="write"></script>
     </div>
     <div class="item">
