✨ Improve signup flow

--- a/src/presentation/views/success.ejs
+++ b/src/presentation/views/success.ejs
@@ -11,6 +11,7 @@
     You're logged in!
   </h1>
   <p id="tokenDisplay"></p>
+  <pre id="userInfo">Fetching user info</pre>
   <button id="logout">Logout</button>
 </body>
 </html>
